[package]
name = "zenoh_ffi"
version = "0.1.0"
edition = "2021"
authors = ["konnta0"]
license = "MIT"
description = "Zenoh C FFI bindings for C#"

[lib]
crate-type = ["cdylib"]
name = "zenoh_ffi"

[dependencies]
zenoh = { version = "1.0.3", features = ["unstable"] }
tokio = { version = "1.41", features = ["full"] }
serde_json = "1.0"
libc = "0.2"
once_cell = "1.19"

[build-dependencies]
csbindgen = "1.9"
cmake = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
